# PipeQL

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp
cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake  antlr4-generator.cmake.in
src/: main.cpp
src/compiler/frontend/PipeQL/: MLIRPipeQLVisitor.cpp
src/examples/: main.cpp
src/grammar/: PipeQL.g4
src/include/pipeql/lib/: JSONPipeQLVisitor.h  VisitorFactory.h
src/include/pipeql/parser/: PipeQLBaseListener.h  PipeQLParser.h
src/lexer/: PipeQL.interp  PipeQL.tokens  PipeQLBaseListener.cpp  PipeQLBaseListener.h  PipeQLBaseVisitor.cpp  PipeQLBaseVisitor.h  PipeQLLexer.cpp  PipeQLLexer.h  PipeQLLexer.interp  PipeQLLexer.tokens  PipeQLListener.cpp  PipeQLListener.h  PipeQLParser.cpp  PipeQLParser.h  PipeQLVisitor.cpp  PipeQLVisitor.h
src/lexer/src/spec/: PipeQLBaseListener.cpp  PipeQLBaseListener.h  PipeQLBaseVisitor.cpp  PipeQLBaseVisitor.h  PipeQLLexer.cpp  PipeQLLexer.h  PipeQLListener.cpp  PipeQLListener.h  PipeQLParser.cpp  PipeQLParser.h  PipeQLVisitor.cpp  PipeQLVisitor.h
src/lib/: JSONPipeQLVisitor.cpp  VisitorFactory.h
src/python/: JSONPipeQLVisitor.py  PipeQLLexer.py  PipeQLListener.py  PipeQLParser.py  PipeQLVisitor.py  main.py
src/sample/: customers.json
src/spec/: PipeQL.g4  pipe-example.md  pipe-example.sql  pipe-syntax.md  query-syntax.md
src/src/lib/: JSONPipeQLVisitor.cpp
src/src/parser/: PipeQLBaseListener.cpp  PipeQLBaseVisitor.cpp  PipeQLBaseVisitor.h  PipeQLLexer.cpp  PipeQLLexer.h  PipeQLListener.cpp  PipeQLListener.h  PipeQLParser.cpp  PipeQLVisitor.cpp  PipeQLVisitor.h
src/tools/: query-table.cpp
